Grails 5.2, Gorm 7.3, Groovy 3 (#543)